--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
-        "google/apiclient": "^2.15",
+        "google/apiclient": "2.15.0",
         "google/apiclient-services": "^0.340",
         "google/auth": "^1.38",
         "phpmailer/phpmailer": "^6.10"
