--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "google/apiclient": "2.15.0",
         "google/apiclient-services": "^0.340",
         "google/auth": "^1.38",
+        "league/oauth2-google": "*",
         "phpmailer/phpmailer": "^6.10"
     },
     "autoload": {
