Update env.example with Xendit and manual payment configuration options

--- a/env.example
+++ b/env.example
@@ -21,19 +21,36 @@ DB_PASSWORD=
 DB_TIMEZONE=+08:00
 
 # ==============================================
-# PayMongo Payment Gateway
+# Payment Gateway Configuration
 # ==============================================
-# Get your API keys from: https://dashboard.paymongo.com/developers
+# Choose your preferred payment provider: paymongo, xendit, or manual
+PAYMENT_PROVIDER=xendit
 
-# For DEVELOPMENT/TESTING - use test keys (starts with sk_test_ and pk_test_)
+# ---------------------------------------------
+# PayMongo (Cards, GCash, PayMaya, QRPh)
+# Get keys from: https://dashboard.paymongo.com/developers
+# ---------------------------------------------
 PAYMONGO_SECRET_KEY=sk_test_YOUR_SECRET_KEY_HERE
 PAYMONGO_PUBLIC_KEY=pk_test_YOUR_PUBLIC_KEY_HERE
 PAYMONGO_TEST_MODE=true
 
-# For PRODUCTION - use live keys (starts with sk_live_ and pk_live_)
-# PAYMONGO_SECRET_KEY=sk_live_YOUR_LIVE_SECRET_KEY_HERE
-# PAYMONGO_PUBLIC_KEY=pk_live_YOUR_LIVE_PUBLIC_KEY_HERE
-# PAYMONGO_TEST_MODE=false
+# ---------------------------------------------
+# Xendit (GCash, PayMaya, GrabPay, QR, Cards)
+# Get keys from: https://dashboard.xendit.co/settings/developers#api-keys
+# RECOMMENDED: More reliable for Filipino payment methods
+# ---------------------------------------------
+XENDIT_SECRET_KEY=xnd_development_YOUR_SECRET_KEY_HERE
+XENDIT_PUBLIC_KEY=xnd_public_development_YOUR_PUBLIC_KEY_HERE
+XENDIT_TEST_MODE=true
+
+# ---------------------------------------------
+# Manual Bank Transfer (Fallback Option)
+# Students will see these details for manual payment
+# ---------------------------------------------
+BANK_NAME="BDO Unibank"
+BANK_ACCOUNT_NAME="Al-Ghaya Learning Management System"
+BANK_ACCOUNT_NUMBER="1234-5678-9012"
+BANK_TRANSFER_INSTRUCTIONS="Please transfer the enrollment fee to the account above and upload your proof of payment. Enrollment will be activated within 24 hours after verification."
 
 # ==============================================
 # Email Configuration (Optional)
